<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.RetailerStartUpScreen"
    android:background="@color/white"
    android:padding="25dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="29dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:onClick="back"
            android:layout_gravity="left"/>

        <ImageView
            android:id="@+id/imvRetailerBanner"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/cookit"
            android:transitionName="banner_trans"/>

        <TextView
            android:id="@+id/tvRetailerLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="logo_trans"
            android:text="@string/retailer_heading"
            android:textSize="44dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/luckiest_guy"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tvRetailerSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="slogan_trans"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:lineSpacingExtra="4dp"
            android:letterSpacing="0.001"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <LinearLayout
            android:weightSum="2"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:onClick="login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btn_signup"
                android:onClick="signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/how_we_word"
            android:textColor="@color/black"
            android:background="#00000000"
            android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>